# pysnips

./: LICENSE  README.md  pyproject.toml
pysnips/: __init__.py  __main__.py  cli.py  generator.py  ipython_ext.py  registry.py
pysnips.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pysnips/templates/: __init__.py
pysnips/utils/: __init__.py  console.py  env.py  export.py
