[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysnips"
version = "0.1.1"
authors = [
  { name="DevTools Engineer", email="engineer@example.com" },
]
description = "A production-quality Python CLI for code templates"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
keywords = ["cli", "templates", "snippets", "python", "machine-learning", "fastapi"]

[project.urls]
"Homepage" = "https://github.com/anusha-b2803/pysnips"
"Bug Tracker" = "https://github.com/anusha-b2803/pysnips/issues"

[project.scripts]
pysnips = "pysnips.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pysnips*"]
